# negrus

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/music/: deafen.rs  join.rs  leave.rs  mod.rs  mute.rs  play.rs  video.rs
