[package]
name = "negrus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serpapi-search-rust="0.1.0",
google-youtube3 = "4.0.1+20220303"
tokio = { version = "1.24.2", features = ["full"] }
rand = "0.8.5"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
songbird = "0.3.0" 

[dependencies.serenity]
version = "0.11"
features = ["client", "standard_framework", "voice", "rustls_backend"]

[profile.release]
lto = true